--- a/sampleObject.html
+++ b/sampleObject.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/style.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <title>Rock Review</title>
-    <link rel="shortcut icon" type="image/jpg" href="assets/images/fav2 cropped.png" />
+    <link rel="icon" type="image/png" href="assets/images/fav2.png" />
 </head>
 
 <body>
@@ -35,20 +35,20 @@
                     <a href="/sampleObject.html">Sample Gym</a>
                 </li>
                 <li class="nav-link not-active">
-                    <a href="#">Write a Review</a>
+                    <a href="./sampleSubmission.html">Add a Gym</a>
                 </li>
                 <ul class="nav-buttons">
                     <li class="nav-button">
-                        Sign Up
+                        <a href="/signup.html">Sign Up</a>
                     </li>
                     <li class="nav-button">
-                        Log In
+                        <a href="/login.html">Log In</a>
                     </li>
                 </ul>
             </ul>
         </div>
     </nav>
-    <main class="container">
+    <main class="mountain-bg">
         <h1 class="page-title"> Impact Climbing </h1>
         <div class="object-rating">
             <span class="rating-value">
@@ -92,6 +92,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
+                    <!-- [2]M. Kipper, 2020. -->
                     <p class="comment">Great facility - plenty of room, things to do and routes to climb. Staff is
                         friendly and helpful.
                         Very kid friendly.</p>
@@ -109,6 +110,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
+                    <!-- [4]J. Cheung, 2018. -->
                     <p class="comment">This place is epic. Just. Epic. Friendly staff, great routes of all levels of
                         both bouldering and
                         climbing. Family friendly atmosphere with a lounge area to just kick it. Highly recommend!!!</p>
@@ -125,6 +127,7 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star-half"></i>
                     </div>
+                    <!-- [3]N. David, 2019. -->
                     <p class="comment">Wonderful climbing gym. Lots of variety of top rope, lead and bouldering for all
                         levels from
                         beginner to expert. Very friendly environment with great staff. Route setters make adjustments
