--- a/sampleSubmission.html
+++ b/sampleSubmission.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/style.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <title>Rock Review</title>
-    <link rel="shortcut icon" type="image/jpg" href="assets/images/fav2 cropped.png" />
+    <link rel="icon" type="image/png" href="assets/images/fav2.png" />
 </head>
 
 <body>
@@ -35,20 +35,20 @@
                     <a href="/sampleObject.html">Sample Gym</a>
                 </li>
                 <li class="nav-link not-active">
-                    <a href="#">Write a Review</a>
+                    <a href="./sampleSubmission.html">Add a Gym</a>
                 </li>
                 <ul class="nav-buttons">
                     <li class="nav-button">
-                        Sign Up
+                        <a href="/signup.html">Sign Up</a>
                     </li>
                     <li class="nav-button">
-                        Log In
+                        <a href="/login.html">Log In</a>
                     </li>
                 </ul>
             </ul>
         </div>
     </nav>
-    <main class="container">
+    <main class="mountain-bg">
         <h1 class="page-title">Add New Gym</h1>
         <div>
             <p>Name of the gym</p>
@@ -70,10 +70,7 @@
             </li>
         </ul>
         <div class="add-image">
-            <p>Upload an Image</p>
-            <p class="image-icon">
-                <i class="fas fa-plus"></i>
-            </p>
+            <img class="add-image-image" src="assets/images/addimage.png">
         </div>
         <input type="submit" value="Add">
 
