fixed styling on results page

--- a/sampleResult.html
+++ b/sampleResult.html
@@ -49,11 +49,11 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <h1 class="page-title"> Results </h1>
+        <h1 class="page-title title-with-bg container"> Results </h1>
         <div class="result-location">
             <img class="sample-map" src="/assets/images/sample_map.png">
         </div>
-        <ul class="sample-results">
+        <ul class="sample-results container">
             <li class="result-info">
                 <h2 class="result-name">
                     <a href="https://www.impactclimbing.com/">
