fixed styling of sample object

--- a/sampleResult.html
+++ b/sampleResult.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <h1 class="page-title title-with-bg container"> Results </h1>
+        <h1 class="page-title black-transparent-bg container"> Results </h1>
         <div class="result-location">
             <img class="sample-map" src="/assets/images/sample_map.png">
         </div>
