--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <h1 class="page-title">Register for an Account</h1>
+        <h1 class="page-title black-transparent-bg container">Register for an Account</h1>
         <!-- Form which will send a POST request to the current URL (empty for now) -->
         <form class="registration-form" method="">
             <div class="expandable-input">
