--- a/sampleObject.html
+++ b/sampleObject.html
@@ -49,29 +49,31 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <h1 class="page-title"> Impact Climbing </h1>
-        <div class="object-rating">
-            <span class="rating-value">
-                4.2
-            </span>
-            <span>
-                <i class="fas fa-star"></i>
-            </span>
-            <span>
-                <i class="fas fa-star"></i>
-            </span>
-            <span>
-                <i class="fas fa-star"></i>
-            </span>
-            <span>
-                <i class="fas fa-star"></i>
-            </span>
-            <span>
-                <i class="fas fa-star-half"></i>
-            </span>
-            <p class="rating-count">
-                based on 45 reviews
-            </p>
+        <div class="black-transparent-bg container">
+            <h1 class="page-title"> Impact Climbing </h1>
+            <div class="object-rating">
+                <span class="rating-value">
+                    4.2
+                </span>
+                <span>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span>
+                    <i class="fas fa-star"></i>
+                </span>
+                <span>
+                    <i class="fas fa-star-half"></i>
+                </span>
+                <p class="rating-count">
+                    based on 45 reviews
+                </p>
+            </div>
         </div>
         <div class="object-image">
             <img src="/assets/images/impact.jpeg" alt="Result Image">
@@ -81,7 +83,7 @@
         </div>
         <div>
             <ul class="sample-reviews">
-                <li class="review">
+                <li class="review review-container">
                     <div class="person">
                         <i class="fas fa-user-circle fa-3x"></i>
                         <p>Michael Kipper</p>
@@ -98,7 +100,7 @@
                         Very kid friendly.</p>
                 </li>
 
-                <li class="review">
+                <li class="review review-container">
                     <div class="person">
                         <i class="fas fa-user-circle fa-3x"></i>
                         <p>Jessica Cheung</p>
@@ -116,7 +118,7 @@
                         climbing. Family friendly atmosphere with a lounge area to just kick it. Highly recommend!!!</p>
                 </li>
 
-                <li class="review">
+                <li class="review review-container">
                     <div class="person">
                         <i class="fas fa-user-circle fa-3x"></i>
                         <p>Noah David</p>
