added link for nav bar home

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="nav-links">
 
                 <li class="nav-link active">
-                    <a href="/">Home</a>
+                    <a href="./index.html">Home</a>
                 </li>
                 <li class="nav-link not-active">
                     <a href="./sampleResult.html">Sample Result</a>
