--- a/terms.html
+++ b/terms.html
@@ -14,7 +14,7 @@
 <body>
     <nav role="navigation" aria-label="main navigation">
         <div class="nav-content">
-            <img class="nav-logo" src="/assets/images/logo-light.png">
+            <img class="nav-logo" src="/assets/images/logo-light.png" alt="website logo">
             <input type="checkbox" id="nav-check">
             <div id="hamburger">
                 <label for="nav-check">
@@ -228,6 +228,12 @@
         <p>As long as the website and the information and services on the website are provided free of charge, we will
             not be liable for any loss or damage of any nature.</p>
     </main>
+    <!-- Footer -->
+    <footer>
+        <a href="https://github.com/matthewpaulin/4ww3" target="_blank">
+            <i class="fab fa-github fa-2x"></i>
+        </a>
+    </footer>
 </body>
 
 </html>
