--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-    <title>Rock Review</title>
+    <title>Sign in | Rock Review</title>
     <link rel="icon" type="image/png" href="assets/images/fav2.png" />
 </head>
 
@@ -51,8 +51,8 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <h1 class="page-title black-transparent-bg container">Login</h1>
-        <!-- Form which will send a POST request to login (empty for now) -->
+        <h1 class="page-title primary-transparent-bg container">Login</h1>
+        <!-- Form which will send a POST request to login (method empty for now) -->
         <form class="submission-form" method="">
             <div class="form-input">
                 <label>Email</label>
