--- a/sampleObject.html
+++ b/sampleObject.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-    <title>Rock Review</title>
+    <title>Sample Object | Rock Review</title>
     <link rel="icon" type="image/png" href="assets/images/fav2.png" />
 </head>
 
@@ -51,7 +51,8 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <div class="black-transparent-bg container">
+        <!-- Title and rating -->
+        <div class="primary-transparent-bg container">
             <h1 class="page-title"> Impact Climbing </h1>
             <div class="object-rating">
                 <span class="rating-value">
@@ -77,12 +78,14 @@
                 </p>
             </div>
         </div>
+        <!-- location image and map -->
         <div class="object-image">
             <img src="/assets/images/impact.jpeg" alt="Result Image">
         </div>
         <div class="object-image">
             <img src="/assets/images/impact-map.png" alt="Result Image">
         </div>
+        <!-- location reviews -->
         <div>
             <ul class="sample-reviews">
                 <li class="review">
