--- a/sampleResult.html
+++ b/sampleResult.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/style.css" />
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-    <title>Rock Review</title>
+    <title>Sample Result | Rock Review</title>
     <link rel="icon" type="image/png" href="assets/images/fav2.png" />
 </head>
 
@@ -51,10 +51,12 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <h1 class="page-title black-transparent-bg container"> Results </h1>
+        <h1 class="page-title primary-transparent-bg container"> Results </h1>
+        <!-- map with search results -->
         <div class="result-location">
             <img class="sample-map" src="/assets/images/sample_map.png" alt="sample map">
         </div>
+        <!-- sample results with title, rating, img, and description -->
         <ul class="sample-results container">
             <li class="result-info">
                 <h2 class="result-name">
