--- a/signup.html
+++ b/signup.html
@@ -51,7 +51,7 @@
         </div>
     </nav>
     <main class="mountain-bg">
-        <h1 class="page-title black-transparent-bg container">Register for an Account</h1>
+        <h1 class="page-title primary-transparent-bg container">Register for an Account</h1>
         <!-- Form which will send a POST request to sign up (empty for now) -->
         <form class="submission-form" method="">
             <div class="form-input">
