--- a/terms.html
+++ b/terms.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Navbar -->
     <nav role="navigation" aria-label="main navigation">
         <div class="nav-content">
             <img class="nav-logo" src="/assets/images/logo-light.png" alt="website logo">
@@ -48,6 +49,7 @@
             </ul>
         </div>
     </nav>
+    <!-- Terms and conditions courtesy of https://www.termsandconditionsgenerator.com-->
     <main class="terms container">
         <h2 class="page-title">Terms and Conditions</h2>
         <br>
@@ -228,6 +230,7 @@
         <p>As long as the website and the information and services on the website are provided free of charge, we will
             not be liable for any loss or damage of any nature.</p>
     </main>
+
     <!-- Footer -->
     <footer>
         <a href="https://github.com/matthewpaulin/4ww3" target="_blank">
